--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h3 v-if="winner === 'player'">You won!</h3>
         <h3 v-else-if="winner === 'monster'">You lost!</h3>
         <h3 v-else>Draw!</h3>
+        <button @click="startGame">Restart Game</button>
       </section>
       <section id="controls">
         <button @click="attackMonster">ATTACK</button>
